<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">login</string>
    <string name="receiving">Receiving</string>
    <string name="weighment">Weighment</string>
    <string name="offloading">Offloading</string>
    <string name="bag_issue">Bag Mgmt</string>
    <string name="vega_offline">Create Item</string>
    <string name="quality">Quality</string>
    <string name="ppq">PPQ</string>
    <string name="container">Container</string>
    <string name="lot_quality">Lot Quality</string>
    <string name="approve">Approve</string>
    <string name="procurement_type">Procure Type :</string>
    <string name="view_offline">View Offline Summary</string>
    <string name="ok">OK</string>
    <string name="postpone">Postpone</string>
    <string name="update">Update</string>
    <string name="product_cashew">Cashew</string>
    <string name="product_coffee">Coffee</string>
    <string name="product_sesame">Sesame</string>
    <string name="product_cocoa">Cocoa</string>
    <string name="product_pepper">Pepper</string>
    <string name="plant_details">Plant Details</string>
    <string name="last_sync_time">Last Sync Time</string>
    <string name="sync">sync</string>
    <string name="pile">Pile</string>
    <string name="status">Status:</string>
    <string name="choose_language">Choose Language</string>
    <string name="select_language">Select Language</string>
    <string name="dispatch">Dispatch</string>
    <string name="mtnt">MTNT</string>
    <string name="rmin">RMIN</string>
    <string name="select_dispatch">Select Dispatch</string>
    <string name="select_sto">Select STO</string>
    <string name="local_sales">Local Sales</string>
    <string name="dispatch_sales">Dispatch - Sales</string>
    <string name="menu_vega_cashew">Vega-Cashew</string>
    <string name="menu_vega_cocoa">Vega-Cocoa</string>
    <string name="menu_vega_coffee">Vega-Coffee</string>
    <string name="menu_vega_papper">Vega-Pepper</string>
    <string name="menu_od_cashew">OD-Cashew</string>
    <string name="menu_od_cocoa">OD-Cocoa</string>
    <string name="menu_od_coffee">OD-Coffee</string>
    <string name="menu_od_papper">OD-Pepper</string>
    <string name="tap_to_scan">Tap to Scan</string>
    <string name="error_lot_id">Please scan valid lot id</string>
    <string name="lot_no">LOT No : </string>
    <string name="enter_gross">Enter gross weight</string>
    <string name="enter_net">Enter net weight</string>
    <string name="enter_bag_type">Enter bag type</string>
    <string name="enter_bag_weight">Enter bag Weight</string>
    <string name="loading_not_end">The loading is not ended</string>
    <string name="please_select_the_weighing_scale">Please select the Weighing scale</string>
    <string name="weigh_scale_connected">Weighscale connected successfully</string>
    <string name="enter_max_value">Enter max value</string>
    <string name="output_material">Output Material</string>
    <string name="po_no">PO No :</string>
    <string name="dispatch_weight_entry">Dispatch - Weight Entry</string>
    <string name="max_bag_count">Max bag count allowed 40</string>
    <string name="fgrn">FGRN</string>
    <string name="print">Print Tally Sheet</string>
    <string name="print_common">Print</string>
    <string name="print_preview">Print Preview</string>
    <string name="print_wh_preview">Print WH Preview</string>
    <string name="please_select_the_printer">Please select the Printer</string>
    <string name="not_connected_with_device">Not connected with any device</string>
    <string name="connected_to">Connected to </string>
    <string name="batch_no">Batch No </string>
    <string name="supplier_weight">MTNT Weight </string>
    <string name="ot_lot_number">OT Lot Number </string>
    <string name="secret_id">Secret Id </string>
    <string name="secret_sample">Secret Sample </string>
    <string name="third_party_sales">Third Party Sales</string>
    <string name="export_sales">Export Sales</string>
    <string name="fg_to_fg">FG To FG</string>
    <string name="production_to_fg">Production To FG</string>
    <string name="acknowledgement">Acknowledgement</string>
    <string name="deliverypicking">Delivery Picking</string>
    <string name="downloadmaster">Download Master</string>
    <string name="material">Material</string>
    <string name="weight">Weight</string>
    <string name="lot_id">Lot Id</string>
    <string name="lot_id_new">Batch No :</string>
    <string name="print_lot_card">Print Lot Card</string>
    <string name="print_ticket">Print Ticket</string>
    <string name="print_secret_code">Print Secret Code</string>
    <string name="print_container_id">Print Container ID</string>
    <string name="print_wh_receipt">Print WH Receipt</string>
    <string name="print_grn">Print Preview GRN</string>
    <string name="print_grn_document">Print GRN</string>
    <string name="print_invoice">Print Invoice</string>
    <string name="print_grn_receipt">Print GRN Receipt</string>
    <string name="pending_sync">Pending Sync</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="reconcillation_report">Reconcillation Report</string>
    <string name="reprint">Reprint</string>
    <string name="container_management">Container</string>
    <string name="trans_grn">GRN</string>
    <string name="trans_invoice">Invoice</string>
    <string name="certificate_premium_reciept">Certificate Premium Receipt</string>
    <string name="with_holding_tax">Withholding Tax </string>
    <string name="advancing">Advancing</string>
    <string name="trans_advance">Advance Creation</string>
    <string name="trans_forward_po">Forward PO</string>
    <string name="trans_mtnt">MTN-T</string>
    <string name="trans_mtnr">MTN-R</string>
    <string name="select_reprint">Select Re-Print</string>
    <string name="print_lot_message">Has the LOT Cards been printed. Do you want to exit the screen?</string>
    <string name="split_lot_message">Has the LOT been Splited. Do you want to exit the screen?</string>
    <string name="proceed">Proceed</string>
    <string name="text">Text</string>
    <string name="print_title_1">Olam Nicaragua S.A.</string>
    <string name="print_title_2">RUC J0310000227276</string>
    <string name="print_title_3">Km 115 Carretera Sébaco - Matagalpa</string>
    <string name="print_title_4">Teléfono : + (505) 2773 1000</string>
    <string name="print_title_5">LIQUIDACIÓN DE CAFÉ</string>
    <string name="print_title_6">RECIBO DE CAFÉ</string>
    <string name="print_title_7">PREMIO POR CERTIFICACION</string>
    <string name="print_title_8">  CONSTANCIA DE RETENCIÓN </string>
    <string name="farm_signature">Productor</string>
    <string name="base_price_per_kg">Base Price(Per KG)</string>
    <string name="gross_value">Gross Value:</string>
    <string name="incentives">Incentives</string>
    <string name="deductions">Deduction</string>
    <string name="export_incentive">Export Incentives:</string>
    <string name="certificate_premium">Certificate Premium:</string>
    <string name="volume_premium">Volume Premium:</string>
    <string name="humidity_premium">Humidity Premium:</string>
    <string name="quality_discounting">Quality Discounting:</string>
    <string name="humidity_discounting">Humidity Discounting:</string>
    <string name="witholding_tax">Witholding Tax:</string>
    <string name="national_stock_exchange">National Stock Exchange Tax:</string>
    <string name="bank_commission">Bank Commission:</string>
    <string name="ftdc">FTDC:</string>
    <string name="sub_total_deduction">Sub Total Deduction</string>
    <string name="net_payment">Net Payment</string>
    <string name="advance_line_item">Advance Line Item</string>
    <string name="advance_number">Advance Number</string>
    <string name="advance_date">Date</string>
    <string name="advance_amount_cs">Advance Amount</string>
    <string name="knock_off_amount">Knock Off Amount:</string>
    <string name="interest">Interest:</string>
    <string name="commission">Commission:</string>
    <string name="legal_expense">Legal Expense:</string>
    <string name="enter_rate">Enter Rate</string>
    <string name="amount_cs">Amount (C$)</string>
    <string name="final_payment">Final Payment</string>
    <string name="total_price">Total Price</string>
    <string name="certification">Certificación:</string>
    <string name="s_plant_name">Nombre de Unidad</string>
    <string name="s_coffee_settlement">Liquidación N°</string>
    <string name="s_plant_code">Código de Unidad</string>
    <string name="s_date_of_pay">Fecha de pago</string>
    <string name="s_material_name">Nombre del Producto</string>
    <string name="s_po_date">Fecha de Contrato</string>
    <string name="s_material_code">Código del Producto</string>
    <string name="s_currency">Moneda</string>
    <string name="s_vendor_code">Código del Productor</string>
    <string name="s_identification_number">RUC/Cedula</string>
    <string name="s_quality_grade">Calidad</string>
    <string name="s_vendor_name">Razón socialr</string>
    <string name="s_producer_name">Nombre del Productor</string>
    <string name="s_quantity_and_amount_detail">Detalle de Cantidad y Valor</string>
    <string name="s_detail">Detalles</string>
    <string name="s_bags_quantity">N°Sacos</string>
    <string name="s_humidity">Humedad</string>
    <string name="s_gross_weight">Peso Bruto</string>
    <string name="s_tare_weight">Peso Tara</string>
    <string name="s_net_price">Precio Bruto (KG)</string>
    <string name="s_amount">Valor</string>
    <string name="s_general_data">DATOS GENERALES</string>
    <string name="s_sap_vendor_name">Proveedor</string>
    <string name="s_buying_unit">Centro de Acopio</string>
    <string name="s_grn_number">GRN N°</string>
    <string name="s_receive_number">Recibo</string>
    <string name="s_tax_id_code">Cédula N°</string>
    <string name="s_date_and_hour">Fecha y hora</string>
    <string name="s_type_of_purchase">Tipo de compra</string>
    <string name="s_batch_number">No.Lote</string>
    <string name="s_uom">UOM</string>
    <string name="s_SAP_MIRO_num">Número de Documento</string>
    <string name="s_net_weight">Peso Neto KG</string>
    <string name="s_net_weight_qqs">Peso Neto QQs</string>
    <string name="s_total_price">Precio total</string>
    <string name="s_certificate"> certificación</string>
    <string name="welcome">Welcome</string>
    <string name="please_set_quick_access_pin">Please set quick access and transaction pin</string>
    <string name="create_new_pin">Create new pin</string>
    <string name="use_device_lock">Use device lock</string>
    <string name="no_data_found">No data found</string>
    <string name="search_question">Search Items</string>
    <string name="st_location">St Location</string>
    <string name="relavant_msg">The error details and its relevant solution is currently not available in the list. But you may be interested in the below relevant results</string>
    <string name="transaction_history_title">Transaction List</string>
    <string name="txn_s_no">S.No</string>
    <string name="txn_grn_no">GRN no</string>
    <string name="txn_vendor_name">Vendor Name</string>
    <string name="txn_vendor_code">Vendor Code</string>
    <string name="txn_qnty">Quantity</string>
    <string name="txn_date">Date</string>
    <string name="txn_grn_price">GRN price</string>
    <string name="txn_tot_price">Total price \nPer Unit</string>
    <string name="txn_st_loc">Storage Location</string>
    <string name="txn_material">Material</string>
    <string name="eudr_status">EUDR Status</string>
    <string name="supplier_id">Supplier Id</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="farmer_id">Farmer Id</string>
    <string name="farmer_name">Farmer Name</string>
    <string name="farmer_weight">Farmer Weight</string>
</resources>