<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_medium">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_mlarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/welcome" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSetPinHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:drawableStart="@drawable/ic_baseline_enhanced_encryption_24"
        android:drawablePadding="@dimen/margin_medium"
        android:drawableTint="@color/blue_mic_dark"
        android:text="@string/please_set_quick_access_pin"
        android:textColor="@color/blue_mic_dark"
        android:textSize="@dimen/text_size_smedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <RadioGroup
        android:id="@+id/rgRadioPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xlarge"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSetPinHead">

        <RadioButton
            android:id="@+id/rbCreateNewPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/create_new_pin" />

        <RadioButton
            android:id="@+id/rbUseExistingPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:text="@string/use_device_lock" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>