<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_mic_small"
    android:background="@null">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_very_small">

        <LinearLayout
            android:id="@+id/llFarmer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/supplier_id"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/text_size_small" />

                    <TextView
                        android:id="@+id/tvSupplierId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/text_size_small"
                        android:textStyle="bold"
                        tools:text="19393024892" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/supplier_name"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/text_size_small" />

                    <TextView
                        android:id="@+id/tvSupplierName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/text_size_small"
                        android:textStyle="bold"
                        tools:text="@string/st_location" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/farmer_id"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/text_size_small" />

                    <TextView
                        android:id="@+id/tvFarmerId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/text_size_small"
                        android:textStyle="bold"
                        tools:text="19393024892" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/farmer_name"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/text_size_small" />

                    <TextView
                        android:id="@+id/tvFarmerName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/text_size_small"
                        android:textStyle="bold"
                        tools:text="@string/st_location" />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/farmer_weight"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/text_size_small" />

                    <TextView
                        android:id="@+id/tvFarmerWeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/text_size_small"
                        android:textStyle="bold"
                        tools:text="@string/st_location" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eudr_status"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/text_size_small" />

                    <TextView
                        android:id="@+id/tvEudrStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/text_size_xmedium"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivDeleteData"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentEnd="true"
        android:layout_margin="2dp"
        android:background="@drawable/do_circle_blue"
        android:backgroundTint="@color/grey_button"
        android:contentDescription="@string/sync"
        android:elevation="5dp"
        android:gravity="center"
        android:padding="5dp"
        android:src="@drawable/ic_close_white_24dp"
        android:tint="@color/white" />
</RelativeLayout>